# rust-playground

./: .env  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
data/: test.db
migrations/2023-10-11-121152_quotes/: up.sql
migrations/2023-10-11-125838_content/: down.sql  up.sql
src/: main.rs
src/config/: env.rs
src/db/: connexion.rs  mod.rs  pool.rs  schema.rs
src/db/entities/: quote.rs
src/db/repositories/: quote.rs
src/http/: error.rs
src/http/controllers/: quotes.rs
src/http_client/: client.rs
