[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
futures = "0.3.16"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
log = "0.4.20"
derive_more = "0.99.17"
simple_logger = "4.2.0"
rand = "0.8.5"
diesel = { version = "2.1.3", features = ["sqlite"] }
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
