[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.20"
derive_more = "0.99.17"
simple_logger = "4.2.0"
rand = "0.8.5"
diesel = { version = "2.1.5", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
actix-web-httpauth = "0.8.1"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "5", features = ["actix-web"] }
r2d2 = "0.8.10"
actix-web-prom = "0.8.0"
gethostname = "0.4.3"
